[gd_scene load_steps=3 format=2]

[ext_resource path="res://DebugFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Debug.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.05264
margin_bottom = -1.05261
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position" type="Label" parent="VBoxContainer"]
margin_right = 232.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 1 )
text = "Position"

[node name="PositionV" type="LineEdit" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 232.0
margin_bottom = 46.0
align = 1
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump Height" type="Label" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 232.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 1 )
text = "Jump Height"

[node name="JumpV" type="LineEdit" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 232.0
margin_bottom = 96.0
align = 1

[node name="Gravity" type="Label" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 232.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 1 )
text = "Gravity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GravityV" type="LineEdit" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 232.0
margin_bottom = 146.0
align = 1

[node name="Max Speed" type="Label" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 232.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 1 )
text = "Max Speed Left/Right"

[node name="MaxV" type="LineEdit" parent="VBoxContainer"]
margin_top = 172.0
margin_right = 232.0
margin_bottom = 196.0
align = 1
editable = false

[node name="Velocity" type="Label" parent="VBoxContainer"]
margin_top = 200.0
margin_right = 232.0
margin_bottom = 218.0
custom_fonts/font = ExtResource( 1 )
text = "Velocity"

[node name="VelocityV" type="LineEdit" parent="VBoxContainer"]
margin_top = 222.0
margin_right = 232.0
margin_bottom = 246.0
align = 1
editable = false
expand_to_text_length = true
context_menu_enabled = false

[node name="Friction" type="Label" parent="VBoxContainer"]
margin_top = 250.0
margin_right = 232.0
margin_bottom = 268.0
custom_fonts/font = ExtResource( 1 )
text = "Friction"

[node name="FrictionV" type="LineEdit" parent="VBoxContainer"]
margin_top = 272.0
margin_right = 232.0
margin_bottom = 296.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Explosion Strength" type="Label" parent="VBoxContainer"]
margin_top = 300.0
margin_right = 232.0
margin_bottom = 318.0
custom_fonts/font = ExtResource( 1 )
text = "Explosion/Propulsion Strength"

[node name="ExploV" type="LineEdit" parent="VBoxContainer"]
margin_top = 322.0
margin_right = 232.0
margin_bottom = 346.0
align = 1
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Label" parent="VBoxContainer"]
margin_top = 350.0
margin_right = 232.0
margin_bottom = 368.0
custom_fonts/font = ExtResource( 1 )
text = "Reset To this Position"

[node name="PositionR" type="LineEdit" parent="VBoxContainer"]
margin_top = 372.0
margin_right = 232.0
margin_bottom = 396.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 400.0
margin_right = 232.0
margin_bottom = 424.0
custom_fonts/font = ExtResource( 1 )
text = "Reset"
[connection signal="text_entered" from="VBoxContainer/JumpV" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
